kustomize/base/currencyservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  namespace: core
  labels:
    app: currencyservice
spec:
  type: ClusterIP
  selector:
    app: currencyservice
  ports:
    - name: grpc
      port: 7000
      targetPort: 7000
